{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 1315,
  "lineage": "f5af8f52-7a4c-9a2c-5211-dd2333c8f314",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-000232a3cc4c0295b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-000232a3cc4c0295b",
            "ingress": [],
            "name": "EKS-GROUP6-CLUSTER-cluster-20240106040950948700000008",
            "name_prefix": "EKS-GROUP6-CLUSTER-cluster-",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS-GROUP6-CLUSTER-cluster"
            },
            "tags_all": {
              "Name": "EKS-GROUP6-CLUSTER-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-0c7d36ce52229cd64",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0c7d36ce52229cd64",
            "ingress": [],
            "name": "EKS-GROUP6-CLUSTER-node-20240106040950948700000009",
            "name_prefix": "EKS-GROUP6-CLUSTER-node-",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS-GROUP6-CLUSTER-node",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "owned"
            },
            "tags_all": {
              "Name": "EKS-GROUP6-CLUSTER-node",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2654693878",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-000232a3cc4c0295b",
            "security_group_rule_id": "sgr-0989460207a5ba5fa",
            "self": false,
            "source_security_group_id": "sg-0c7d36ce52229cd64",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3859839196",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0b375a561e8a4f562",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3608459916",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-003db99ff9d6c0d29",
            "self": false,
            "source_security_group_id": "sg-000232a3cc4c0295b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1919092305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0189e63a511390bb2",
            "self": false,
            "source_security_group_id": "sg-000232a3cc4c0295b",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3139527111",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-087a6e843d1451c30",
            "self": false,
            "source_security_group_id": "sg-000232a3cc4c0295b",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2826788326",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-01dad5389752b0dd1",
            "self": false,
            "source_security_group_id": "sg-000232a3cc4c0295b",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3436998189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0558f762b50df27e7",
            "self": false,
            "source_security_group_id": "sg-000232a3cc4c0295b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1061433437",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0ad1de3b003893cb2",
            "self": false,
            "source_security_group_id": "sg-000232a3cc4c0295b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2559882539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0ba9528ebd3918ec6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3944825713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0c74183562fb26c0e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1333715102",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0c7d36ce52229cd64",
            "security_group_rule_id": "sgr-0565d59c5b9d9ab42",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e42b8e21f16022c",
            "domain": "vpc",
            "id": "eipalloc-08e42b8e21f16022c",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-13-43-248-232.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.248.232",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a90c08bd5e096875",
            "domain": "vpc",
            "id": "eipalloc-0a90c08bd5e096875",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-168-79-116.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.79.116",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0198dee84920489ac",
            "domain": "vpc",
            "id": "eipalloc-0198dee84920489ac",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-3-10-67-90.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.67.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proj-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:internet-gateway/igw-0b5b208f6992b464e",
            "id": "igw-0b5b208f6992b464e",
            "owner_id": "330616035002",
            "tags": {
              "Environment": "dev",
              "Name": "dev-project-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-project-igw"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e42b8e21f16022c",
            "association_id": "eipassoc-0b045db77cca9f9c4",
            "connectivity_type": "public",
            "id": "nat-00d11a39d3535fac8",
            "network_interface_id": "eni-0d30c2d3bbe5f2e88",
            "private_ip": "10.0.11.155",
            "public_ip": "13.43.248.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03e12579a961d3ee4",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a90c08bd5e096875",
            "association_id": "eipassoc-0a0e9afa869ca2c44",
            "connectivity_type": "public",
            "id": "nat-09a2b408e3cf7dc54",
            "network_interface_id": "eni-0d3437fa1c4daf77b",
            "private_ip": "10.0.12.165",
            "public_ip": "18.168.79.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03fa45446716a7624",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0198dee84920489ac",
            "association_id": "eipassoc-08a6bd5837aa0683b",
            "connectivity_type": "public",
            "id": "nat-00bae3d17dec2aa9b",
            "network_interface_id": "eni-0d8f47fc938a0b66f",
            "private_ip": "10.0.13.78",
            "public_ip": "3.10.67.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07292a6d9a6a0cf37",
            "tags": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-nat-gateway-3"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b5b208f6992b464e",
            "id": "r-rtb-0e014078bc5ca29401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e014078bc5ca2940",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-0a3ada3f2366c4813",
            "id": "rtb-0a3ada3f2366c4813",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d11a39d3535fac8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-05a347cf29ed3361c",
            "id": "rtb-05a347cf29ed3361c",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a2b408e3cf7dc54",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-05e70b4560728486e",
            "id": "rtb-05e70b4560728486e",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00bae3d17dec2aa9b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-route-table-3"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-route-table-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:route-table/rtb-0e014078bc5ca2940",
            "id": "rtb-0e014078bc5ca2940",
            "owner_id": "330616035002",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5b208f6992b464e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb16c469b1ac1732",
            "route_table_id": "rtb-0a3ada3f2366c4813",
            "subnet_id": "subnet-097d43ec5614927ad"
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.privateRT",
            "module.networking.aws_subnet.private-subnets",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b37b8f22897d5296",
            "route_table_id": "rtb-05a347cf29ed3361c",
            "subnet_id": "subnet-0cdc822399517da19"
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.privateRT",
            "module.networking.aws_subnet.private-subnets",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040f50810600953cf",
            "route_table_id": "rtb-05e70b4560728486e",
            "subnet_id": "subnet-0d49eeb04bef3ed5c"
          },
          "dependencies": [
            "module.networking.aws_eip.nat-eip",
            "module.networking.aws_nat_gateway.nat-gateway",
            "module.networking.aws_route_table.privateRT",
            "module.networking.aws_subnet.private-subnets",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff3cf62d09c23177",
            "route_table_id": "rtb-0e014078bc5ca2940",
            "subnet_id": "subnet-03e12579a961d3ee4"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00865745f8a711f9b",
            "route_table_id": "rtb-0e014078bc5ca2940",
            "subnet_id": "subnet-03fa45446716a7624"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e38d1e752b09cc0",
            "route_table_id": "rtb-0e014078bc5ca2940",
            "subnet_id": "subnet-07292a6d9a6a0cf37"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.proj-igw",
            "module.networking.aws_route_table.publicRT",
            "module.networking.aws_subnet.public-subnets",
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-097d43ec5614927ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097d43ec5614927ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-0cdc822399517da19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdc822399517da19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-0d49eeb04bef3ed5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d49eeb04bef3ed5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-03e12579a961d3ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e12579a961d3ee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-1",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-03fa45446716a7624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fa45446716a7624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-2",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:subnet/subnet-07292a6d9a6a0cf37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07292a6d9a6a0cf37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "330616035002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public Subnet-dev-3",
              "kubernetes.io/cluster/EKS-GROUP6-CLUSTER": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0632940e93501c651"
          },
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "projectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:vpc/vpc-0632940e93501c651",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0365e00d5b1389418",
            "default_route_table_id": "rtb-0c9f7a23539fc532d",
            "default_security_group_id": "sg-0a03150dfb86c04f1",
            "dhcp_options_id": "dopt-0ee78848abbaafd1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0632940e93501c651",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c9f7a23539fc532d",
            "owner_id": "330616035002",
            "tags": {
              "Environment": "dev",
              "Name": "GROUP6-PROJECT-VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "GROUP6-PROJECT-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_ctrl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-0d646548bcd96b265",
            "description": "for outbound subnet data packets/traffic",
            "egress": [],
            "id": "sg-0d646548bcd96b265",
            "ingress": [],
            "name": "outbound-sg",
            "name_prefix": "",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_ctrl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-0eab37a60ce4edddd",
            "description": "for inbound data packets/traffic",
            "egress": [],
            "id": "sg-0eab37a60ce4edddd",
            "ingress": [],
            "name": "inbound-sg",
            "name_prefix": "",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group/sg-0034cacac5d9ae263",
            "description": "Allow inbound traffic from my IP address",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0034cacac5d9ae263",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.168.81.4/32"
                ],
                "description": "postgresql ingress route 1",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "86.168.81.4/32"
                ],
                "description": "postgresql ingress route 2",
                "from_port": 5433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5433
              }
            ],
            "name": "Allow postgres",
            "name_prefix": "",
            "owner_id": "330616035002",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres-sg"
            },
            "tags_all": {
              "Name": "postgres-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0632940e93501c651"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.data.external.myipaddr"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0f6bb3561da63c454",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f6bb3561da63c454",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d646548bcd96b265",
            "security_group_rule_id": "sgr-0f6bb3561da63c454",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.egress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "outbound_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-04e0e0806b10f20d8",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": null,
            "id": "sgr-04e0e0806b10f20d8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d646548bcd96b265",
            "security_group_rule_id": "sgr-04e0e0806b10f20d8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.egress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port1_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-058a03bef720b9a39",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-058a03bef720b9a39",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-058a03bef720b9a39",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port2_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-064b46cb2c2f78ddb",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 3000,
            "id": "sgr-064b46cb2c2f78ddb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-064b46cb2c2f78ddb",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port3_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-038e192ad0953f905",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-038e192ad0953f905",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-038e192ad0953f905",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port4_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0850d3bb4375c57ee",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 8080,
            "id": "sgr-0850d3bb4375c57ee",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-0850d3bb4375c57ee",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0811c32a7b4c87778",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0811c32a7b4c87778",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-0811c32a7b4c87778",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-06ef30fafe31f2642",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 80,
            "id": "sgr-06ef30fafe31f2642",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-06ef30fafe31f2642",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0ee751d9577c4e07b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0ee751d9577c4e07b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-0ee751d9577c4e07b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-00a4a29c97c86617b",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": null,
            "from_port": 443,
            "id": "sgr-00a4a29c97c86617b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-00a4a29c97c86617b",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inboundssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:330616035002:security-group-rule/sgr-0982497bc34c4d021",
            "cidr_ipv4": "86.168.81.4/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0982497bc34c4d021",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0eab37a60ce4edddd",
            "security_group_rule_id": "sgr-0982497bc34c4d021",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.projectVPC",
            "module.security.aws_security_group.ingress_ctrl",
            "module.security.data.external.myipaddr"
          ]
        }
      ]
    }
  ]
}